--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node-cmd": "5.0.0"
   },
   "engines": {
-    "node": "8.x"
+    "node": ">=16.x"
   },
   "repository": {
     "url": "https://github.com/domfarolino/web-kitchen"
